--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <string name="gallery">Gallery</string>
     <string name="upload">Upload</string>
     <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
+    <string name="title_activity_location">LocationActivity</string>
+    <string name="include_my_location">Include My Location</string>
+    <string name="empty_location_warning">Failed To Get Location</string>
 </resources>
